<resources>
    <string name="app_name">Sample School Teacher</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assignment">Assignments</string>
    <string name="menu_announcement">Announcement</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="menu_view_subjects">View Subjects</string>
    <string name="menu_view_students">View Students</string>
    <string name="menu_view_students_data">View Students Data</string>
    <string name="menu_view_timetable">Timetable</string>
    <string name="menu_view_exams">Examination</string>
    <string name="menu_view_results">Results</string>
    <string name="menu_add_results">Add Results</string>
    <string name="menu_view_attendance">Attendance</string>
    <string name="menu_view_quiz">Quiz</string>
    <string name="menu_add_quiz">Add Quiz</string>
    <string name="menu_view_class">Class</string>
    <string name="menu_online_class">Online Class</string>
    <string name="menu_view_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>