<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_courses" />

        <item
            android:id="@+id/nav_my_weekday"
            android:icon="@drawable/ic_baseline_table_view_24"
            android:title="@string/menu_view_timetable" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_view_profile" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout"
            android:onClick="logout"/>
    </group>
</menu>