<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.courses.class_data.ClassDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_class_proctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Class Proctor:"
            android:padding="5dp"
            android:layout_marginStart="3dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/hvd"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/proctor_card"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="6dp"
            android:layout_margin="5dp"
            android:translationZ="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_class_proctor"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_teacher_icon" />

                <TextView
                    android:id="@+id/txt_class_proctor_name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="Proctor Name"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:fontFamily="@font/hvd"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_students"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_student_icon"
                        android:contentDescription="@string/menu_view_students"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Students"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/hvd"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_timetable"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_timetable_icon_yellow"
                        android:contentDescription="@string/menu_view_timetable"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Timetable"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/hvd"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_quiz"
                        android:contentDescription="@string/menu_view_quiz"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="QUIZ"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/hvd"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_view_students_assignments"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_assignments"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/menu_assignment"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Assignments"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/hvd"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_exams"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_examination"
                        android:contentDescription="@string/menu_view_exams"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Examination"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/hvd"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>



    </LinearLayout>

</ScrollView>